[LG-53]- Add config for TestContainers to Integration Test(IT)
-- Update Docs
